Add additional readme instructions for getting started
Also remove the package-lock.json file (and add it to gitignore) while
also moving the direct dependencies of the project into the
package.json file's dependencies section.

--- a/package.json
+++ b/package.json
@@ -2,5 +2,10 @@
     "name": "myfoo",
     "scripts": {
         "test": "jest"
+    },
+    "dependencies": {
+        "typescript": "latest",
+        "jest": "latest",
+        "ts-jest": "latest"
     }
 }
